score on middle of game

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
-
-<div >Score: <span><span id='score'>0</span></span></div>
-
-<div >
-  <div class='modal'>
-    <h1>User Instructions</h1>
-    <p>Destroy the object before it touches the ground</p>
-    <p>Use the left arrow key to move left</p>
-    <p>Use the right arrow key to move right</p>
-    <p>Press the spacebar to shoot</p>
-  </div>
-</div>
-
-<canvas class='classCanvas'></canvas>
-<link rel="stylesheet" href="./game.css">
-<script src="./player.js"></script>
-<title>Destroy-Objects</title>
+<body>
+  <div class='score'>Score: <span><span id='score'>0</span></span></div>
+  <canvas class='classCanvas'><div >
+    <div class='modal'>
+      <h1>User Instructions</h1>
+      <p>Destroy the object before it touches the ground</p>
+      <p>Use the left arrow key to move left</p>
+      <p>Use the right arrow key to move right</p>
+      <p>Press the spacebar to shoot</p>
+    </div>
+  </div></canvas>
+  <link rel="stylesheet" href="./game.css">
+  <script src="./player.js"></script>
+  <title>Destroy-Objects</title>
+</body>
 
