--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
   <link rel="stylesheet" href="./game.css">
   <script src="./player.js"></script>
   <title>Destroy-Objects</title>
-  <div>music</div>
+
+  <div class='music-container'>
+    <div id='music'>MUSIC</div>
+    <audio src="audio.mp3" id="audio"></audio>
+    <button id="playPauseBTN" onclick=playPause()>ON</button>
+  </div>
+
 </body>
 
